--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -30,11 +30,12 @@
 
     <script src="lib/js/angular.min.js"></script>
     <script src="lib/js/angular-route.min.js"></script>
-    <script src="lib/js/angular-ui-router.min.js"></script>
-    <script src="lib/js/angular-ui-bootstrap.min.js"></script>
-    <script src="lib/js/angular-scroll.min.js"></script>
-    <script src="lib/js/underscore.min.js"></script>
-    <script src="lib/js/moment.min.js"></script>
+    <!-- excluding these dependencies to speed up performance and load times. only include them as necessary. -->
+    <!--<script src="lib/js/angular-ui-router.min.js"></script>-->
+    <!--<script src="lib/js/angular-ui-bootstrap.min.js"></script>-->
+    <!--<script src="lib/js/angular-scroll.min.js"></script>-->
+    <!--<script src="lib/js/underscore.min.js"></script>-->
+    <!--<script src="lib/js/moment.min.js"></script>-->
     <script src="src/js/app.js"></script>
     <script src="src/js/HomeCtrl.js"></script>
 
@@ -63,16 +64,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="#/home">Home</a>
                     </li>
                     <li>
-                        <a href="src/html/about.html">About</a>
+                        <a href="#/about">About</a>
                     </li>
                     <li>
-                        <a href="src/html/blog.html">Blog</a>
+                        <a href="#/blog">Blog</a>
                     </li>
                     <li>
-                        <a href="src/html/contact.html">Contact</a>
+                        <a href="#/contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +83,6 @@
     </nav>
 
     <div ng-view></div>
-
 
     <footer>
         <div class="container">
