updating images of the carousel and background

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 
 <body ng-controller="homeCtrl">
 
-    <div class="brand">{{title}}</div>
+    <div class="brand">The Lifted Life</div>
     <div class="address-bar">1457 Felspar St | San Diego, CA 92109 | 732.771.7996</div>
 
     <!-- Navigation -->
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Adventure Time 2017</p>
+                    <p>Copyright &copy; Kushan Patel 2017</p>
                 </div>
             </div>
         </div>
