--- a/web/src/main/webapp/src/html/home.html
+++ b/web/src/main/webapp/src/html/home.html
@@ -9,37 +9,49 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                        <!--<li data-target="#carousel-example-generic" data-slide-to="4"></li>-->
+                        <!--<li data-target="#carousel-example-generic" data-slide-to="5"></li>-->
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive img-full" src="src/img/slide-1.jpg" alt="">
+                        <div class="item active" style="horizontal-align: center;">
+                            <img class="img-responsive" src="src/img/glacier.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive img-full" src="src/img/slide-2.jpg" alt="">
+                            <img class="img-responsive" src="src/img/maine.jpg" alt="">
                         </div>
+                        <!--<div class="item">-->
+                            <!--<img class="img-responsive img-full" src="src/img/maine_cliff.jpg" alt="">-->
+                        <!--</div>-->
                         <div class="item">
-                            <img class="img-responsive img-full" src="src/img/slide-3.jpg" alt="">
+                            <img class="img-responsive" src="src/img/cayman_scuba.jpg" alt="">
+                        </div>
+                        <!--<div class="item">-->
+                            <!--<img class="img-responsive img-full" src="src/img/maine_clouds.jpg" alt="">-->
+                        <!--</div>-->
+                        <div class="item">
+                            <img class="img-responsive" src="src/img/cayman_sunset.jpg" alt="">
                         </div>
                     </div>
 
                     <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <a class="left carousel-control" data-target="#carousel-example-generic" data-slide="prev">
                         <span class="icon-prev"></span>
                     </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <a class="right carousel-control" data-target="#carousel-example-generic" data-slide="next">
                         <span class="icon-next"></span>
                     </a>
                 </div>
                 <h2 class="brand-before">
                     <small>Welcome to</small>
                 </h2>
-                <h1 class="brand-name">Business Casual</h1>
+                <h1 class="brand-name">the Lifted Life!</h1>
                 <hr class="tagline-divider">
                 <h2>
                     <small>By
-                        <strong>Start Bootstrap</strong>
+                        <strong>Kushan Patel</strong>
                     </small>
                 </h2>
             </div>
@@ -51,13 +63,12 @@
             <div class="col-lg-12">
                 <hr>
                 <h2 class="intro-text text-center">Build a website
-                    <strong>worth visiting</strong>
                 </h2>
                 <hr>
                 <img class="img-responsive img-border img-left" src="src/img/intro-pic.jpg" alt="">
                 <hr class="visible-xs">
                 <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
+                <p>A huge thanks to Death to the Stock Photo for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
             </div>
         </div>
