some minor html and styling updates

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 
 <body ng-controller="homeCtrl">
 
-    <div class="brand">The Lifted Life</div>
+    <div class="brand">Kushan Patel</div>
     <div class="address-bar">1457 Felspar St | San Diego, CA 92109 | 732.771.7996</div>
 
     <!-- Navigation -->
