More front end style and content updates

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -44,7 +44,7 @@
 <body ng-controller="homeCtrl">
 
     <div class="brand">Kushan Patel</div>
-    <div class="address-bar">1457 Felspar St | San Diego, CA 92109 | 732.771.7996</div>
+    <div class="address-bar">kushanpatelcmu@gmail.com | 732.771.7996</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Adventure Time</a>
+                <a class="navbar-brand" href="index.html">Kushan Patel</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
