--- a/web/src/main/webapp/src/html/about.html
+++ b/web/src/main/webapp/src/html/about.html
@@ -5,52 +5,69 @@
             <div class="col-lg-12">
                 <hr>
                 <h2 class="intro-text text-center">About
-                    <strong>business casual</strong>
+                    <strong>Kushan Patel</strong>
                 </h2>
                 <hr>
             </div>
-            <div class="col-md-6">
-                <img class="img-responsive img-border-left" src="src/img/slide-2.jpg" alt="">
+            <div class="col-md-2">
+                <img class="img-responsive img-border-left" src="src/img/gtri_logo.jpg" alt="">
             </div>
-            <div class="col-md-6">
-                <p>This is a great place to introduce your company or project and describe what you do.</p>
-                <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+            <div class="col-md-10">
+                <p>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team.
+                    Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers.
+                    Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies.
+                    Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users.
+                    Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite.
+                    All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence
+                    Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</p>
+            </div>
+            <div class="col-lg-12"><hr></div>
+            <div class="col-md-2">
+                <img class="img-responsive img-border-left" src="src/img/gtri_logo.jpg" alt="">
+            </div>
+            <div class="col-md-10">
+                <p>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team.
+                    Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers.
+                    Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies.
+                    Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users.
+                    Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite.
+                    All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence
+                    Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</p>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="box">
-            <div class="col-lg-12">
-                <hr>
-                <h2 class="intro-text text-center">Our
-                    <strong>Team</strong>
-                </h2>
-                <hr>
-            </div>
-            <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-            </div>
-            <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-            </div>
-            <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="box">-->
+            <!--<div class="col-lg-12">-->
+                <!--<hr>-->
+                <!--<h2 class="intro-text text-center">Our-->
+                    <!--<strong>Team</strong>-->
+                <!--</h2>-->
+                <!--<hr>-->
+            <!--</div>-->
+            <!--<div class="col-sm-4 text-center">-->
+                <!--<img class="img-responsive" src="http://placehold.it/750x450" alt="">-->
+                <!--<h3>John Smith-->
+                    <!--<small>Job Title</small>-->
+                <!--</h3>-->
+            <!--</div>-->
+            <!--<div class="col-sm-4 text-center">-->
+                <!--<img class="img-responsive" src="http://placehold.it/750x450" alt="">-->
+                <!--<h3>John Smith-->
+                    <!--<small>Job Title</small>-->
+                <!--</h3>-->
+            <!--</div>-->
+            <!--<div class="col-sm-4 text-center">-->
+                <!--<img class="img-responsive" src="http://placehold.it/750x450" alt="">-->
+                <!--<h3>John Smith-->
+                    <!--<small>Job Title</small>-->
+                <!--</h3>-->
+            <!--</div>-->
+            <!--<div class="clearfix"></div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
 <!-- /.container -->
