--- a/web/src/main/webapp/src/html/home.html
+++ b/web/src/main/webapp/src/html/home.html
@@ -8,8 +8,8 @@
                     <ol class="carousel-indicators hidden-xs">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                        <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+                        <!--<li data-target="#carousel-example-generic" data-slide-to="3"></li>-->
                         <!--<li data-target="#carousel-example-generic" data-slide-to="4"></li>-->
                         <!--<li data-target="#carousel-example-generic" data-slide-to="5"></li>-->
                     </ol>
@@ -17,23 +17,23 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active" style="horizontal-align: center;">
-                            <img class="img-responsive" src="src/img/glacier.jpg" alt="">
+                            <img class="img-responsive" src="src/img/kushan_shirt.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="src/img/maine.jpg" alt="">
+                            <img class="img-responsive" src="src/img/glacier.jpg" alt="">
                         </div>
                         <!--<div class="item">-->
                             <!--<img class="img-responsive img-full" src="src/img/maine_cliff.jpg" alt="">-->
                         <!--</div>-->
-                        <div class="item">
-                            <img class="img-responsive" src="src/img/cayman_scuba.jpg" alt="">
-                        </div>
+                        <!--<div class="item">-->
+                            <!--<img class="img-responsive" src="src/img/cayman_scuba.jpg" alt="">-->
+                        <!--</div>-->
                         <!--<div class="item">-->
                             <!--<img class="img-responsive img-full" src="src/img/maine_clouds.jpg" alt="">-->
                         <!--</div>-->
-                        <div class="item">
-                            <img class="img-responsive" src="src/img/cayman_sunset.jpg" alt="">
-                        </div>
+                        <!--<div class="item">-->
+                            <!--<img class="img-responsive" src="src/img/cayman_sunset.jpg" alt="">-->
+                        <!--</div>-->
                     </div>
 
                     <!-- Controls -->
@@ -47,7 +47,7 @@
                 <h2 class="brand-before">
                     <small>Welcome to</small>
                 </h2>
-                <h1 class="brand-name">the Lifted Life!</h1>
+                <h1 class="brand-name">My Website</h1>
                 <hr class="tagline-divider">
                 <h2>
                     <small>By
@@ -62,16 +62,13 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Software Engineer | Agile Specialist</h2>
+                <h2 class="intro-text text-center">Software Engineer</h2>
                 <hr>
-                <img class="img-responsive img-border img-left" src="src/img/maine_cliff.jpg" alt="">
+                <!--<img class="img-responsive img-left" src="src/img/gtri_logo.jpg" alt="">-->
                 <hr class="visible-xs">
                 <p>
-                    With 10 years of industry experience, I've honed my skills in various web development technologies which include the likes of AngularJS, Javascript, HTML5/CSS3, Java
-                    based web services, and relational database technologies. I started my career at Lockheed Martin doing software configuration analyst,
-                </p>
-                <p>
-
+                    Executed and contributed to full-stack web development applications, with an emphasis on front end features, browser manipulation, and cross-browser compatibility.
+                    Front & back-end experience in web application frameworks written in Java, Javascript, HTML5, CSS, AJAX, jQuery, & Angular JS
                 </p>
             </div>
         </div>
@@ -81,10 +78,13 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Adventurer</h2>
+                <h2 class="intro-text text-center">SCRUM Lead | Navy Cyber Situational Awareness</h2>
                 <hr>
-                <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <p>
+                    After gaining a complete understanding of software architecture and the entire software lifecycle,
+                    I earned leadership responsibilities and was promoted to SCRUM Lead. As the lead, I was responsible for managing and guiding
+                    the engineering team to develop, deploy, and maintain the NCSA software suite in the operational environment.
+                </p>
             </div>
         </div>
     </div>
