Completed first draft of front-end for kushanpatelcmu.com

--- a/web/src/main/webapp/src/html/about.html
+++ b/web/src/main/webapp/src/html/about.html
@@ -3,41 +3,74 @@
     <div class="row">
         <div class="box">
             <div class="col-lg-12">
-                <hr>
-                <h2 class="intro-text text-center">About
-                    <strong>Kushan Patel</strong>
+                <!--<hr>-->
+                <h2 class="intro-text text-center">
+                    <img class="" src="src/img/gtri_logo.jpg" alt="">
                 </h2>
-                <hr>
+                <!--<hr>-->
             </div>
-            <div class="col-md-2">
-                <img class="img-responsive img-border-left" src="src/img/gtri_logo.jpg" alt="">
+            <div class="col-lg-12">
+                <br/>
+                <p>
+                    After gaining a complete understanding of software architecture and the entire software lifecycle,
+                    I earned leadership responsibilities and was promoted to SCRUM Lead. As the lead, I was responsible for managing and guiding
+                    the engineering team to develop, deploy, and maintain the NCSA software suite in the operational environment.
+                </p>
+                <!--<br/>-->
+                <h4 class="brand-before text-center">SCRUM Lead</h4>
+                <p>
+                    <ul>
+                        <li>Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</li>
+                        <li>Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies</li>
+                        <li>Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users</li>
+                        <li>Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite</li>
+                        <li>All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence</li>
+                        <li>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team. Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers</li>
+                    </ul>
+                </p>
+
+                <h4 class="brand-before text-center">Research Engineer</h4>
+                <p>
+                    <ul>
+                        <li>Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies</li>
+                        <li>Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users</li>
+                        <li>Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</li>
+                        <li>Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite</li>
+                        <li>All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence</li>
+                        <li>Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers</li>
+                        <li>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team</li>
+                    </ul>
+                </p>
             </div>
-            <div class="col-md-10">
-                <p>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team.
-                    Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers.
-                    Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies.
-                    Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users.
-                    Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite.
-                    All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence
-                    Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</p>
+
+
+            <div class="col-lg-12">
+                <!--<hr>-->
+                <h2 class="intro-text text-center">
+                    <img class="" src="src/img/bah_logo.jpg" alt="">
+                </h2>
+                <!--<hr>-->
             </div>
-            <div class="col-lg-12"><hr></div>
-            <div class="col-md-2">
-                <img class="img-responsive img-border-left" src="src/img/gtri_logo.jpg" alt="">
-            </div>
-            <div class="col-md-10">
-                <p>Mentored and on-boarded new developers, tasked junior developers, and managed large amounts of tasking through delegation and distribution of workload amongst UI team.
-                    Benchmarked specifications for implementation, authored and contributed to technical software documentation to bolster productivity among developers.
-                    Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies.
-                    Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users.
-                    Streamlined implementation, enhancement, and maintenance of the entire software lifecycle through the use of JIRA and Atlassian tool suite.
-                    All tasking and output from concept development (Product Owner), data acquisition (SME), UI/UX design (HSI), software development (Dev team), operations (Ops team) to management was tracked and accounted for in JIRA and/or Confluence
-                    Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</p>
+
+            <div class="col-lg-12">
+                <h4 class="brand-before text-center">Senior Consultant</h4>
+                <p>
+                    <ul>
+                        <li>Coordinated core server product development in Spring MVC, created a RESTful API endpoints, and built comprehensive, rich UI features, ensuring compatibility with all major browsers on desktop platforms</li>
+                        <li>Developed secure web application using the AngularJS framework all integrated with service layer written in Java to enable data persistence in Oracle</li>
+                        <li>Experience in developing mapping/geospatial capabilities using ESRI’s ArcGIS Flex/Javascript API</li>
+                        <li>Advanced knowledge of RDBMS interfaces in Oracle, MySQL, & ORM technologies such as Hibernate</li>
+                        <li>TortoiseSVN for versioning, Spring framework for dependency injection, Maven for builds & dependency management, Grunt for front-end builds, and Jenkins for continuous integration environments</li>
+                        <li>Experience writing professional technical documentation (test scripts, SDD, VDD, etc.), performing regression testing, driving testing processes with client’s task lead counterpart, and presenting at board meetings</li>
+                    </ul>
+                </p>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
 
+
+    <!-- *** DO NOT DELETE THIS COMMENTED CODE *** -->
     <!--<div class="row">-->
         <!--<div class="box">-->
             <!--<div class="col-lg-12">-->
@@ -68,6 +101,7 @@
             <!--<div class="clearfix"></div>-->
         <!--</div>-->
     <!--</div>-->
+    <!-- *** DO NOT DELETE THIS COMMENTED CODE *** -->
 
 </div>
-<!-- /.container -->
+
