--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -69,9 +69,9 @@
                     <li>
                         <a href="#/about">About</a>
                     </li>
-                    <li>
-                        <a href="#/blog">Blog</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="#/blog">Blog</a>-->
+                    <!--</li>-->
                     <li>
                         <a href="#/contact">Contact</a>
                     </li>
