got the contact form to send an email

--- a/web/src/main/webapp/src/html/about.html
+++ b/web/src/main/webapp/src/html/about.html
@@ -11,14 +11,14 @@
             </div>
             <div class="col-lg-12">
                 <br/>
-                <p>
+                <p class="resume-bullets">
                     After gaining a complete understanding of software architecture and the entire software lifecycle,
                     I earned leadership responsibilities and was promoted to SCRUM Lead. As the lead, I was responsible for managing and guiding
                     the engineering team to develop, deploy, and maintain the NCSA software suite in the operational environment.
                 </p>
                 <!--<br/>-->
                 <h4 class="brand-before text-center">SCRUM Lead</h4>
-                <p>
+                <p class="resume-bullets">
                     <ul>
                         <li>Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</li>
                         <li>Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies</li>
@@ -30,7 +30,7 @@
                 </p>
 
                 <h4 class="brand-before text-center">Research Engineer</h4>
-                <p>
+                <p class="resume-bullets">
                     <ul>
                         <li>Implemented development processes, sprint battle rhythm, and executed meetings to optimize NCSA software development team productivity using agile methodologies</li>
                         <li>Optimized rhythm of 3-week sprint for cross-functional team of 10 engineers resulting in increased team velocity/output by 30-40%, weekly builds (vice quarterly), and doubling active users</li>
@@ -54,7 +54,7 @@
 
             <div class="col-lg-12">
                 <h4 class="brand-before text-center">Senior Consultant</h4>
-                <p>
+                <p class="resume-bullets">
                     <ul>
                         <li>Coordinated core server product development in Spring MVC, created a RESTful API endpoints, and built comprehensive, rich UI features, ensuring compatibility with all major browsers on desktop platforms</li>
                         <li>Developed secure web application using the AngularJS framework all integrated with service layer written in Java to enable data persistence in Oracle</li>
