--- a/web/src/main/webapp/src/html/contact.html
+++ b/web/src/main/webapp/src/html/contact.html
@@ -31,24 +31,25 @@
                 <hr>
                 <h2 class="intro-text text-center">Contact Form</h2>
                 <hr>
-                <form role="form">
+                <form id="gform" role="form" name="contact-form" method="POST"
+                    action="https://script.google.com/macros/s/AKfycbzH73KDClQ9-vrzhUZiVuANnZQmlh6Ardhqw808iMJZumVSV_g/exec">
                     <div class="row">
                         <div class="form-group col-lg-4">
                             <label>Name</label>
-                            <input type="text" class="form-control">
+                            <input type="text" name="name" class="form-control">
                         </div>
                         <div class="form-group col-lg-4">
                             <label>Email Address</label>
-                            <input type="email" class="form-control">
+                            <input type="email" name="email" class="form-control">
                         </div>
                         <div class="form-group col-lg-4">
                             <label>Phone Number</label>
-                            <input type="tel" class="form-control">
+                            <input type="tel" name="number" class="form-control">
                         </div>
                         <div class="clearfix"></div>
                         <div class="form-group col-lg-12">
                             <label>Message</label>
-                            <textarea class="form-control" rows="6"></textarea>
+                            <textarea class="form-control" name="message" rows="6"></textarea>
                         </div>
                         <div class="form-group col-lg-12">
                             <input type="hidden" name="save" value="contact">
