--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -38,11 +38,11 @@
     <!--<script src="lib/js/moment.min.js"></script>-->
     <script src="src/js/app.js"></script>
     <script src="src/js/HomeCtrl.js"></script>
+    <script src="src/js/form-submission-handler.js"></script>
 
 </head>
 
 <body ng-controller="homeCtrl">
-
     <div class="brand">Kushan Patel</div>
     <div class="address-bar">kushanpatelcmu@gmail.com | 732.771.7996</div>
 
