--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -38,7 +38,7 @@
     <!--<script src="lib/js/moment.min.js"></script>-->
     <script src="src/js/app.js"></script>
     <script src="src/js/HomeCtrl.js"></script>
-    <script src="src/js/form-submission-handler.js"></script>
+    <script src="src/js/ContactCtrl.js"></script>
 
 </head>
 
@@ -106,7 +106,6 @@
         interval: 2000 //changes the speed
     })
     </script>
-
 </body>
 
 </html>
