--- a/web/src/main/webapp/src/html/contact.html
+++ b/web/src/main/webapp/src/html/contact.html
@@ -31,32 +31,37 @@
                 <hr>
                 <h2 class="intro-text text-center">Contact Form</h2>
                 <hr>
-                <form id="gform" role="form" name="contact-form" method="POST"
-                    action="https://script.google.com/macros/s/AKfycbzH73KDClQ9-vrzhUZiVuANnZQmlh6Ardhqw808iMJZumVSV_g/exec">
+                <form id="gform" role="form" name="contact-form">
                     <div class="row">
                         <div class="form-group col-lg-4">
-                            <label>Name</label>
-                            <input type="text" name="name" class="form-control">
+                            <label>Name:</label>
+                            <input id="name" type="text" name="name" class="form-control">
+                            <span id="name-invalid" style="color: red; display: none">Name is required</span>
                         </div>
                         <div class="form-group col-lg-4">
-                            <label>Email Address</label>
-                            <input type="email" name="email" class="form-control">
+                            <label>Email Address:</label>
+                            <input id="email" type="email" name="email" class="form-control">
+                            <span id="email-invalid" style="color: red; display: none">Invalid Email</span>
                         </div>
                         <div class="form-group col-lg-4">
-                            <label>Phone Number</label>
-                            <input type="tel" name="number" class="form-control">
+                            <label>Phone Number (digits only):</label>
+                            <input id="number" type="tel" name="number" class="form-control">
+                            <span id="number-invalid" style="color: red; display: none">Invalid Phone Number - digits only</span>
                         </div>
                         <div class="clearfix"></div>
                         <div class="form-group col-lg-12">
                             <label>Message</label>
-                            <textarea class="form-control" name="message" rows="6"></textarea>
+                            <textarea id="message" class="form-control" name="message" rows="6"></textarea>
+                            <span id="message-invalid" style="color: red; display: none">Message is required</span>
                         </div>
                         <div class="form-group col-lg-12">
-                            <input type="hidden" name="save" value="contact">
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <button type="submit" class="btn btn-default" ng-click="handleFormSubmit()">Submit</button>
                         </div>
                     </div>
                 </form>
+            </div>
+            <div id="thankyou_message" style="display:none" class="col-lg-12 text-center">
+                Thank you for reaching out. I will get back to you as soon as possible.
             </div>
         </div>
     </div>
