minor update to label wording

--- a/web/src/main/webapp/src/html/contact.html
+++ b/web/src/main/webapp/src/html/contact.html
@@ -39,7 +39,7 @@
                             <span id="name-invalid" style="color: red; display: none">Name is required</span>
                         </div>
                         <div class="form-group col-lg-4">
-                            <label>Email Address:</label>
+                            <label>Your Email Address:</label>
                             <input id="email" type="email" name="email" class="form-control">
                             <span id="email-invalid" style="color: red; display: none">Invalid Email</span>
                         </div>
