--- a/web/src/main/webapp/src/html/about.html
+++ b/web/src/main/webapp/src/html/about.html
@@ -17,7 +17,7 @@
                     the engineering team to develop, deploy, and maintain the NCSA software suite in the operational environment.
                 </p>
                 <!--<br/>-->
-                <h4 class="brand-before text-center">SCRUM Lead</h4>
+                <h4 class="brand-before text-center">Scrum Lead</h4>
                 <p class="resume-bullets">
                     <ul>
                         <li>Interfacing with client, managing expectations, providing ramifications/consequences of engineering decisions, and guiding technical vision and direction on $7.8 million contract</li>
