--- a/web/src/main/webapp/src/html/home.html
+++ b/web/src/main/webapp/src/html/home.html
@@ -3,6 +3,8 @@
     <div class="row">
         <div class="box">
             <div class="col-lg-12 text-center">
+                <small><h3 class="brand-name" style="margin-top: 40px">Software Engineer | Certified Scrum Master | Agile Specialist</h3></small>
+
                 <div id="carousel-example-generic" class="carousel slide">
                     <!-- Indicators -->
                     <ol class="carousel-indicators hidden-xs">
@@ -24,16 +26,7 @@
                         <span class="icon-next"></span>
                     </a>
                 </div>
-                <!--<h2 class="brand-before">-->
-                    <!--<small>Welcome to</small>-->
-                <!--</h2>-->
-                <small><h3 class="brand-name" style="margin-top: 40px">Software Engineer | SCRUM Lead</h3></small>
-                <!--<hr class="tagline-divider">-->
-                <!--<h2>-->
-                    <!--<small>By-->
-                        <!--<strong>Kushan Patel</strong>-->
-                    <!--</small>-->
-                <!--</h2>-->
+                
             </div>
         </div>
     </div>
