--- a/web/src/main/webapp/src/html/home.html
+++ b/web/src/main/webapp/src/html/home.html
@@ -3,7 +3,8 @@
     <div class="row">
         <div class="box">
             <div class="col-lg-12 text-center">
-                <small><h3 class="brand-name" style="margin-top: 40px">Software Engineer | Certified Scrum Master | Agile Specialist</h3></small>
+
+                <small><h3 class="brand-name" style="margin-top: 30px; margin-bottom: 30px">Software Engineer | Certified Scrum Master | Agile Specialist</h3></small>
 
                 <div id="carousel-example-generic" class="carousel slide">
                     <!-- Indicators -->
